tests/parsing/smtlib/poly/errors/160_function_def_bad_par_var_1.expected
File "tests/parsing/smtlib/poly/errors/160_function_def_bad_par_var_1.psmt2", line 2, character 26-27:
2 | (define-fun-rec foo (par (_)))
                              ^
Error while parsing a function definition, read the reserved word '_',
      but expected a sort variable (symbol).
